# chore

./: Cargo.toml  chore.toml  clay-config.json
src/: cli.rs  file_processor.rs  init.rs  lib.rs  main.rs  path_resolver.rs  scanner.rs  stats.rs
src/config/: defaults.rs  mod.rs
src/processor/: comment_detector.rs  mod.rs
