[package]
name = "chore-cli"
version = "0.0.2"
edition = "2024"
license = "MIT"
authors = ["Canmi(Canmi21) <t@canmi.icu>"]
repository = "https://github.com/canmi21/seam"
description = "A path comment fmt"
categories = ["development-tools"]

[[bin]]
name = "chore"
path = "src/main.rs"

[lib]

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
walkdir = "2"
